testdata/baselines/reference/compiler/fuzzRegressionUnterminatedJSDoc.errors.txt
fuzzRegressionUnterminatedJSDoc.ts(2,1): error TS1010: '*/' expected.


==== fuzzRegressionUnterminatedJSDoc.ts (1 errors) ====
    /**
    
    
!!! error TS1010: '*/' expected.